# JanusVideoroomStreamer

./: CMakeLists.txt  Config.h  Log.cpp  Log.h  MessageType.h  README.md  Session.cpp  Session.h  WsClient.cpp  WsClient.h  janus-videoroom-streamer.conf.sample  main.cpp
snap/: snapcraft.yaml
snap/hooks/: install
